# crusta

./: CMakeLists.txt  README  README.md
cmake/: Construo.cmake  Core.cmake  Crusta.cmake  CrustaDesktop.cmake  CrustaVislet.cmake  FindVrui.cmake  Package.cmake
etc/: crusta.cfg
include/: BufferPool.h  Cache.h  Crusta.h  FocusViewEvaluator.h  FrustumVisibility.h  GlobalGrid.h  GridClient.h  LodEvaluator.h  MainCache.h  QuadCache.h  QuadCache.hpp  QuadTerrain.h  QuadTree.h  Reference.h  Refinement.h  Scope.h  Spheroid.h  SpheroidGrid.h  Terrain.h  TextureAllocator.h  ViewLod.h  VisibilityEvaluator.h  basics.h  dummies.h  gridProcessing.h  quadCommon.h
include/GL/: GlProgram.h  GlewObject.h  VruiGlew.h
include/GLMotif/: ColorHexagon.h  ColorMap.h  ColorMapEditor.h  ColorPicker.h  ColorPickerWindow.h  FileAndFolderSelectionDialog.h  PaletteEditor.h  RangeEditor.h  RangeWidget.h
include/Misc/: ColorMap.h
include/construo/: ArcInfoBinaryGridImageFile.h  Builder.h  Builder.hpp  ColorTextureSpecs.h  ConstruoSettings.h  ConstruoVisualizer.h  Converters.h  DemHeightSubsampleFilter.h  DemSpecs.h  DynamicFilter.h  Filter.h  Filter.hpp  GdalImageFile.h  GdalImageFile.hpp  GdalTransform.h  GeoTransform.h  GeometryTypes.h  ImageFile.h  ImageFile.hpp  ImageFileLoader.h  ImageFileLoader.hpp  ImagePatch.h  ImagePatch.hpp  ImageTransform.h  ImageTransformReader.h  MagickImageFile.h  PixelHelpers.h  PngImageFile.h  PpmImageFile.h  QuadtreeFile.h  QuadtreeFile.hpp  QuadtreeFileHeaders.h  ReiImageFile.h  Sampler.h  SphereCoverage.h  SubsampleFilter.h  TextureColorSubsampleFilter.h  TpmFile.h  TpmImageFile.h  TpmImageFile.hpp  (+4 more)
include/crusta/: Cache.h  Cache.hpp  CacheRequest.h  ColorMapper.h  ColorPicker.h  ColorTextureSpecs.h  CompositeShader.h  Crusta.h  CrustaApp.h  CrustaComponent.h  CrustaSettings.h  CrustaVislet.h  CrustaVisualizer.h  DataIndex.h  DataManager.h  DebugTool.h  DemHeight.h  DemHeightGlobeData.h  DemHeightPixelOps.h  DemSpecs.h  ElevationRangeShiftTool.h  ElevationRangeTool.h  Ellipsoid.h  FocusViewEvaluator.h  FrustumVisibility.h  GlProgram.h  GlobeColorTextureTraits.h  GlobeData.h  GlobeData.hpp  GlobeDataTraits.h  GlobeDiskFile.h  GlobeDiskFile.hpp  GlobeFile.h  GlobeFile.hpp  GlobeTopographyTraits.h  Homography.h  IdGenerator.h  LayerDataGlobeData.h  LightingShader.h  LodEvaluator.h  (+46 more)
share/: crustaSettings.cfg  decoratedRenderer.fp  desktop.cfg  elevation.fs  litElevation.vs  mapSymbols.cfg  mouse.cfg  pre.cfg  readme.txt  trackpad.cfg
share/etc/: enableSliceTool.cfg
share/vrui/: desktop.cfg  mouse.cfg
source/: Cache.cpp  Crusta.cpp  FocusViewEvaluator.cpp  FrustumVisibility.cpp  GlobalGrid.cpp  LodEvaluator.cpp  QuadCache.cpp  QuadTerrain.cpp  QuadTree.cpp  Spheroid.cpp  SpheroidGrid.cpp  Terrain.cpp  TextureAllocator.cpp  ViewLod.cpp  main.cpp  simplexnoise1234.cpp
source/GL/: GlewObject.cpp
source/GLMotif/: ColorHexagon.cpp  ColorMap.cpp  ColorMapEditor.cpp  ColorMapInOut.cpp  ColorPicker.cpp  ColorPickerWindow.cpp  FileAndFolderSelectionDialog.cpp  PaletteEditor.cpp  RangeEditor.cpp  RangeWidget.cpp  RelativeSlider.cpp
source/Misc/: ColorMap.cpp
source/construo/: ArcInfoBinaryGridImageFile.cpp  ColorTextureSpecs.cpp  Construo.cpp  ConstruoSettings.cpp  ConstruoVisualizer.cpp  DemSpecs.cpp  Filter.cpp  GdalImageFile.cpp  GdalTransform.cpp  GeoTransform.cpp  ImageCoverage.cpp  ImageTransform.cpp  ImageTransformReader.cpp  MagickImageFile.cpp  PngImageFile.cpp  PpmImageFile.cpp  SphereCoverage.cpp  TpmFile.cpp  TpmImageFile.cpp  Tree.cpp  UtmTransform.cpp  Visualizer.cpp  construoGlobals.cpp
source/crusta/: CacheRequest.cpp  ColorMap.cpp  ColorMapper.cpp  ColorPicker.cpp  ColorTextureSpecs.cpp  CompositeShader.cpp  Crusta.cpp  CrustaApp.cpp  CrustaSettings.cpp  CrustaVislet.cpp  CrustaVisualizer.cpp  DataIndex.cpp  DataManager.cpp  DebugTool.cpp  DemSpecs.cpp  ElevationRangeShiftTool.cpp  ElevationRangeTool.cpp  FocusViewEvaluator.cpp  FrustumVisibility.cpp  GlProgram.cpp  Homography.cpp  LightingShader.cpp  LodEvaluator.cpp  Node.cpp  PaletteEditor.cpp  QuadCache.cpp  QuadNodeData.cpp  QuadNodeDataBundles.cpp  QuadTerrain.cpp  ResourceLocator.cpp  Scope.cpp  Section.cpp  SliceTool.cpp  Sphere.cpp  Spheroid.cpp  StatsManager.cpp  SurfaceApproximation.cpp  SurfaceProbeTool.cpp  SurfaceProjector.cpp  SurfaceTool.cpp  (+6 more)
src/GL/: GlProgram.cpp  VruiGlew.cpp
src/GLMotif/: ColorHexagon.h  ColorMapEditor.cpp  ColorMapInOut.cpp  ColorMapInOut.h  ColorPicker.h  RelativeSlider.h
src/construo/: Builder.h  Builder.hpp  Construo.cpp  ConstruoSettings.cpp  ConstruoSettings.h  ConstruoVisualizer.cpp  ConstruoVisualizer.h  Converters.h  GdalImageFile.cpp  GdalImageFile.h  GdalImageFile.hpp  GdalTransform.cpp  GdalTransform.h  GeoTransform.cpp  GeoTransform.h  GeometryTypes.h  ImageCoverage.cpp  ImageCoverage.h  ImageFile.h  ImageFile.hpp  ImageFileLoader.h  ImageFileLoader.hpp  ImagePatch.h  ImagePatch.hpp  ImageTransform.cpp  ImageTransform.h  SphereCoverage.cpp  SphereCoverage.h  SubsampleFilter.h  SubsampleFilter.hpp  TpmFile.cpp  TpmImageFile.h  TpmImageFile.hpp  Tree.cpp  Tree.h  Tree.hpp  construoGlobals.cpp  construoGlobals.h  vrui.h
src/crusta/: Cache.h  Cache.hpp  ColorMapper.cpp  ColorMapper.h  Crusta.cpp  Crusta.h  CrustaApp.cpp  CrustaApp.h  CrustaComponent.h  CrustaSettings.cpp  CrustaSettings.h  CrustaVislet.h  CrustaVisualizer.cpp  CrustaVisualizer.h  DataIndex.cpp  DataIndex.h  DataManager.cpp  DataManager.h  DebugTool.cpp  DebugTool.h  Dialog.cpp  Dialog.h  FocusViewEvaluator.cpp  FocusViewEvaluator.h  FrustumVisibility.cpp  FrustumVisibility.h  GlProgram.cpp  GlProgram.h  GlobeData.h  GlobeFile.h  Homography.cpp  Homography.h  IdGenerator.h  LayerData.h  LayerDataGlobeData.h  LayerSettingsDialog.cpp  LayerSettingsDialog.h  LayerToggleTool.cpp  LayerToggleTool.h  LightSettings.cpp  (+73 more)
src/crustacore/: DemHeight.h  DemHeightGlobeData.h  GlobeData.h  GlobeData.hpp  GlobeFile.h  GlobeFile.hpp  LayerData.h  LayerDataGlobeData.h  PixelOps.h  PixelOps.hpp  Polyhedron.h  PolyhedronLoader.cpp  PolyhedronLoader.h  QuadtreeFile.h  QuadtreeFile.hpp  Scope.cpp  (+14 more)
(+121 files in other folders)
